--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -7,20 +8,66 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <script src="~/Scripts/jquery-3.3.1.min.js"></script>
-    <link href="~/Content/fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <link rel="stylesheet" href="~/Content/bootstrap.min.css">
     <script src="~/Scripts/bootstrap.min.js"></script>
     <link href="~/Content/Layout.css" rel="stylesheet">
+    <link href="~/Content/bootstrap-treeview/bootstrap-treeview.min.css" rel="stylesheet" />
+    <script src="~/Scripts/jquery.ztree.all.js" type="text/javascript"></script>
+    <link href="~/Content/zTreeStyle/zTreeStyle.css" rel="stylesheet" />
+    <script src="~/Scripts/bootstrap-treeview.min.js"></script>
+    <link href="~/Content/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/limonte-sweetalert2/8.11.8/sweetalert2.min.js"></script>
 
 
+    <style>
+        ul.top-menu > li > .logout:visited, ul.top-menu > li > .logout:hover {
+            color: red;
+            background-color: #4ECDC4;
+        }
+
+        div#menuTree, div#menuTree li ul {
+            margin-top: 5px;
+            margin-left: 5px;
+            padding: 0;
+        }
+
+            div#menuTree li ul li {
+                margin-top: 10px;
+            }
+
+        div#menuTree {
+            margin-top: 75px;
+        }
+
+        .ztree li span.node_name {
+            font-size: 18px;
+            line-height: 30px;
+        }
+
+        .fa-lg {
+            margin-top: 10px;
+            margin-left: 4px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+
+
+
+        .ztree li a.level0 {
+            width: 85%;
+        }
+    </style>
 </head>
 
 <body style="background-color:antiquewhite">
+    <!-- 使用权限树去 构造 左侧菜单-->
     <section id="container">
         <!--header start-->
         <header class="header black-bg">
             <div class="sidebar-toggle-box">
-                <div class="fa fa-bars tooltips" data-placement="right" data-original-title="Toggle Navigation"></div>
+                <div class="fa fa-bars tooltips" data-toggle="#sidebar" data-placement="right" data-original-title="Toggle Navigation"></div>
             </div>
             <!--logo start-->
             <a href="/Home/Index" class="logo"><b>Ja<span>bil</span></b></a>
@@ -59,51 +106,55 @@
                 <ul class="nav pull-right top-menu">
                     <li><b class="wel">欢迎您</b></li>
                     <li><span id="user"></span></li>
-                    <li><a class="logout" href="/Login/Index">Logout</a></li>
-
+                    <li><a class="logout" href="javascript:void(0);">Logout</a></li>
                 </ul>
             </div>
         </header>
         <!--sidebar start-->
         <aside>
             <div id="sidebar" class="nav-collapse ">
-                <!-- sidebar menu start-->
-                <ul class="sidebar-menu" id="nav-accordion">
-                    <li class="sub-menu active" role="presentation">
-                        <a href="#Collapse" class="nav-header collapsed " data-toggle="collapse" data-parent="#nav-accordion">
-                            <i class="fa fa-edit" aria-hidden="true"></i>
-                            <span>夹具出入库登记</span>
-                        </a>
-                        <ul id="Collapse" class=" nav-list collapse in ">
-                            <li><a href="/OutRecord/Index">领用 ( 出库 )登记</a></li>
-                            <li><a href="/InRecord/Index">归还 ( 入库 )登记</a></li>
-                        </ul>
-                    </li>
-                    <li class="sub-menu ">
-                        <a href="javascript:;">
-                            <i class="fa fa-wrench" aria-hidden="true"></i>
-                            <span>夹具报修</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="fa fa-trash" aria-hidden="true"></i>
-                            <span>夹具报废</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="javascript:;">
-                            <i class="fa fa-cart-plus" aria-hidden="true"></i>
-                            <span>夹具采购入库</span>
-                        </a>
-                    </li>
-                    <li class="sub-menu">
-                        <a href="/Test/Index">
-                            <i class="fa fa-trash" aria-hidden="true"></i>
-                            <span>Test</span>
-                        </a>
-                    </li>
-                </ul>
+
+                <div id="menuTree" class="ztree">
+
+                </div>
+
+                @*sidebar menu start
+                    <ul class="sidebar-menu" id="nav-accordion">
+                        <li class="sub-menu active" role="presentation">
+                            <a href="#Collapse" class="nav-header collapsed " data-toggle="collapse" data-parent="#nav-accordion">
+                                <i class="fa fa-edit" aria-hidden="true"></i>
+                                <span>夹具出入库登记</span>
+                            </a>
+                            <ul id="Collapse" class=" nav-list collapse in ">
+                                <li><a href="/OutRecord/Index">领用 ( 出库 )登记</a></li>
+                                <li><a href="/InRecord/Index">归还 ( 入库 )登记</a></li>
+                            </ul>
+                        </li>
+                        <li class="sub-menu ">
+                            <a href="javascript:;">
+                                <i class="fa fa-wrench" aria-hidden="true"></i>
+                                <span>夹具报修</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a href="javascript:;">
+                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                <span>夹具报废</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a href="javascript:;">
+                                <i class="fa fa-cart-plus" aria-hidden="true"></i>
+                                <span>夹具采购入库</span>
+                            </a>
+                        </li>
+                        <li class="sub-menu">
+                            <a href="/Test/Index">
+                                <i class="fa fa-trash" aria-hidden="true"></i>
+                                <span>Test</span>
+                            </a>
+                        </li>
+                    </ul>*@
                 <!-- sidebar menu end-->
             </div>
         </aside>
@@ -117,6 +168,107 @@
         </section>
     </section>
     <script>
+        //自定义图标样式
+        function addDiyDom(treeId, treeNode, isExpand) {
+            var clasObj = $("#" + treeNode.tId + "_ico")
+            clasObj.removeClass();
+            //console.log(treeNode);
+            if (treeNode.nodeIcon)
+                clasObj.addClass(treeNode.nodeIcon);
+
+            if (treeNode.isParent) {
+                var classSwitch = $("#" + treeNode.tId + "_switch");
+                if (isExpand)
+                    classSwitch.removeClass().addClass(treeNode.collapseIcon);
+                else
+                    classSwitch.removeClass().addClass(treeNode.expandIcon);
+            }
+
+        }
+        //双击后 图标又会变回去
+        function zTreeOnDblClick(event, treeId, treeNode) {
+            alert(treeNode ? treeNode.tId + ", " + treeNode.name : "isRoot");
+        };
+
+        function zTreeOnExpand(event, treeId, treeNode) {
+            addDiyDom(treeId, treeNode, false);
+        };
+
+        function zTreeOnCollapse(event, treeId, treeNode) {
+            addDiyDom(treeId, treeNode, true);
+        };
+
+        $('.logout').click(function () {
+            swal.fire({
+                title: '确定退出吗？',
+                text: '您将退出此网站,我们会通过邮箱的方式给您发送最新消息',
+                type: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: '确定退出',
+                cancelButtonText: '取消退出',
+                confirmButtonClass: 'btn btn-success ',
+                cancelButtonClass: 'btn btn-danger',
+                buttonsStyling: false
+            }).then(function (isConfirm) {
+                if (isConfirm.value === true) {
+                    $.ajax({
+                        url: "/Login/DoLogout",
+                        type: 'post',
+                        success: function (result) {
+                            if (result.success) {
+                                alert(result.tips);
+                                window.location.href = "/Login/Index";
+                            }
+                        }
+                    })
+                }
+            })
+
+        })
+        //得到菜单树
+        $(function () {
+            var zNodes;
+
+            var setting = {
+                data: {
+                    key: {
+                        isParent: "isParent"
+                    },
+                    simpleData: {
+                        enable: true,
+                        idKey: "id",
+                        pIdKey: "pId",
+                        rootPId: null
+                    }
+                },
+                view: {
+                    showLine: false,
+                    addDiyDom: addDiyDom,
+                    onDblClick: zTreeOnDblClick
+                },
+                callback: {
+                    onExpand: zTreeOnExpand, //展开
+                    onCollapse: zTreeOnExpand, //折叠
+                },
+            };
+            $.ajax({
+                type: "post",
+                async: false,
+                url: "/User/GetMenuTree",
+                success: function (result) {
+                    zNodes = result;
+                    console.log(zNodes);
+                }
+            })
+            $.fn.zTree.init($("#menuTree"), setting, zNodes);
+
+
+            //console.log(zNodes);
+
+
+        })
 
         $(function () {
             //修复collapse不能正常折叠的问题
@@ -131,16 +283,18 @@
                 return false;//停止运行bootstrap自带的函数
             });
         })
+        //获取用户姓名
         $(function () {
             $.ajax({
                 type: "post",
-                url: "/Home/GetUserName",              
+                url: "/User/GetCurrentUserName",
                 success: function (result) {
                     $("#user").text(result.userName);
                 }
             });
         })
     </script>
+
 </body>
 
 </html>                   
