--- a/Content/Layout.css
+++ b/Content/Layout.css
@@ -180,6 +180,113 @@ ul.top-menu > li > a {
     #sidebar ul li {
         position: relative;
     }
+    #sidebar .sub-menu > .nav-list li {
+        padding-left: 32px;
+    }
+
+        #sidebar .sub-menu > .nav-list li:last-child {
+            padding-bottom: 10px;
+        }
+.nav-collapse.collapse {
+    display: inline;
+}
+
+ul.sidebar-menu, ul.sidebar-menu li ul.nav-list {
+    margin: 4px 0 0;
+    padding: 0;
+}
+
+ul.sidebar-menu {
+    margin-top: 75px;
+}
+
+#sidebar > ul > li > ul.sub {
+    display: none;
+}
+
+    #sidebar > ul > li.active > ul.sub, #sidebar > ul > li > ul.sub > li > a {
+        display: block;
+    }
+
+ul.sidebar-menu li ul.nav-list li {
+    background: #2f323a;
+    margin-bottom: 0;
+    margin-left: 0;
+    margin-right: 0;
+}
+
+    ul.sidebar-menu li ul.nav-list li:last-child {
+        border-radius: 0 0 4px 4px;
+        -webkit-border-radius: 0 0 4px 4px;
+    }
+
+
+
+
+
+
+ul.sidebar-menu li {
+    /*line-height: 20px !important;*/
+    margin-bottom: 5px;
+    margin-left: 10px;
+    margin-right: 10px;
+}
+
+    ul.sidebar-menu li.sub-menu {
+        line-height: 15px;
+    }
+
+    ul.sidebar-menu li a span {
+        display: inline-block;
+    }
+
+    ul.sidebar-menu li a {
+        color: #aeb2b7;
+        text-decoration: none;
+        display: block;
+        padding: 15px 0 15px 10px;
+        font-size: 12px;
+        outline: none;
+        -webkit-transition: all 0.3s ease;
+        -moz-transition: all 0.3s ease;
+        -o-transition: all 0.3s ease;
+        -ms-transition: all 0.3s ease;
+        transition: all 0.3s ease;
+    }
+
+        ul.sidebar-menu li a.active, ul.sidebar-menu li a:hover, ul.sidebar-menu li a:focus {
+            background: #4ECDC4;
+            color: #fff;
+            display: block;
+            -webkit-transition: all 0.3s ease;
+            -moz-transition: all 0.3s ease;
+            -o-transition: all 0.3s ease;
+            -ms-transition: all 0.3s ease;
+            transition: all 0.3s ease;
+        }
+
+    ul.sidebar-menu li ul.nav-list li a {
+        background: #2f323a;
+        margin-bottom: 0;
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+
+
+    ul.sidebar-menu li a i {
+        font-size: 15px;
+        padding-right: 6px;
+    }
+
+    ul.sidebar-menu li a:hover i, ul.sidebar-menu li a:focus i {
+        color: #fff;
+    }
+
+    ul.sidebar-menu li a.active i {
+        color: #fff;
+    }
+
 
 
 #nav-accordion{
